# QES_CMAKE

./: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/plugins/: CMakeLists.txt
src/plugins/coreplugin/: CMakeLists.txt  coreplugin.cpp  coreplugin.h
src/plugins/helloworld/: CMakeLists.txt  hello.json  version.rc  version.rc.in
