cmake_minimum_required(VERSION 3.10)
project(QES)
# 设定版本号
set(TSP_VERSION_MAJ 2)
set(TSP_VERSION_MIN 1)
set(TSP_VERSION_PATCH 0)
set(TSP_VERSION_BUILD_NUM 0)
add_definitions(-DTSP_VERSION_MAJ=${TSP_VERSION_MAJ})
add_definitions(-DTSP_VERSION_MIN=${TSP_VERSION_MIN})
add_definitions(-DTSP_VERSION_PATCH=${TSP_VERSION_PATCH})
add_definitions(-DTSP_VERSION_BUILD_NUM=${TSP_VERSION_BUILD_NUM})
message("Set version maj min. ${TSP_VERSION_MAJ}")
message("Version rc file path: ${TSP_VERSION_MAJ}")

add_subdirectory(3rdparty)
add_subdirectory(src)
set_property(DIRECTORY APPEND PROPERTY CMAKE_ORDERED_DIRECTORIES TRUE)
